# rust-web-crawler

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  appsettings.example.json  appsettings.json  docker-compose.yml
config/: crawler.docker.json  server.docker.json
dashboard/: .gitignore  Dockerfile  package.json  tailwind.config.ts  tsconfig.json
dashboard/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/pages/%5Burl%5D/: page.tsx
dashboard/src/app/queue/: page.tsx
dashboard/src/app/search/: page.tsx
dashboard/src/components/: EventFeed.tsx  MetricCard.tsx  QueueTable.tsx  SearchForm.tsx  SearchResults.tsx
dashboard/src/lib/: api.ts  config.ts  types.ts
src/: main.rs
src/config/: cli.rs  mod.rs
src/db/: mod.rs
src/events/: mod.rs
src/fetcher/: mod.rs  robots.rs
src/logging/: mod.rs
src/models/: mod.rs
src/parser/: mod.rs
src/scheduler/: mod.rs
src/server/: mod.rs
